# ecommerce-customer-service-skill-mcp

./: .gitignore  PROJECT_STRUCTURE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  actions.py  capabilities.py  context.py  contracts.py  default_policy.py  dependencies.py  executor.py  guardrails.py  markdown_skill.py  registry.py  runtime.py  tool_registry.py
backend/app/api/: auth.py  chat.py
backend/app/core/: config.py
backend/app/schemas/: auth.py  chat.py
backend/app/skills/: __init__.py  fallback.py
backend/db/: schema.sql  seed.sql
backend/knowledge/account/: account_merge_not_supported.md  login_security_lock.md  member_points_rules.md
backend/knowledge/after_sales/: doa_device_process.md  earbuds_hygiene_return.md  missing_accessory_claim.md  quality_photo_evidence.md  refund_after_return_received.md  repair_timeline.md  screen_damage_paid_repair.md  trade_in_device_return.md  warranty_out_of_region.md  water_damage_policy.md
backend/knowledge/billing/: coupon_refund_after_cancel.md  duplicate_payment_handling.md  installment_refund_rule.md  invoice_electronic_time.md
backend/knowledge/compatibility/: charger_protocols.md  (+9 more)
backend/tests/: test_chat.py  test_customer_service_mcp.py  test_knowledge_search.py  test_memory.py  test_remote_mcp_gateway.py  test_skill_loader.py  test_tool_registry.py
mcp_server/: .env.example  pyproject.toml
mcp_server/app/: config.py  main.py  plugin_factory.py  schemas.py
mcp_server/tests/: test_http_mcp_server.py
(+138 files in other folders)
