[project]
name = "customer-service-mcp-server"
version = "0.1.0"
description = "Standalone HTTP MCP-compatible server for customer-service tools."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "PyMySQL>=1.1.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
